--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
         <div id="chatbox">
             <div class="message-container bot-message">
-                <p class="message-bubble">こんにちは。ChatYMSです。ご用件をどうぞ。</p>
+                <p class="message-bubble">こんにちは。私の名前はやまそーです。この会話の履歴は残りません。</p>
             </div>
         </div>
 
