--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                         <h3 id="precautionsTitle">注意事項</h3>
                         <p class="precaution-item" role="note" id="precaution1"></p>
                         <p class="precaution-item" role="note" id="precaution2"></p>
+                        <p class="precaution-item" role="note" id="precaution3"></p>
+                        <p class="precaution-item" role="note" id="precaution4"></p>
+                        <p class="precaution-item" role="note" id="precaution5"></p>
                     </div>
                     <div class="settings-section app-info-section">
                         <h3 id="appInfoTitle">情報</h3>
