--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <h1 id="chatTitle">ChatYMS</h1>
             <div class="header-controls">
                 <button id="settingsButton" class="icon-button" title="設定" aria-label="設定を開く">
-                    </button>
+                    <span class="material-icons">settings</span>
+                </button>
             </div>
         </header>
 
