--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="header-controls">
                 <button id="settingsButton" class="icon-button" title="設定" aria-label="設定を開く">
                     <span class="material-icons">settings</span>
-                </button>
+                </butto>
             </div>
         </header>
 
