--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
         <header>
             <h1 id="chatTitle">ChatYMS</h1>
             <div class="header-controls">
-                <button id="settingsButton" class="icon-button" title="設定" aria-label="設定を開く">
-                    <span class="material-icons">settings</span>
-                </butto>
+                <button class="icon-button" id="settingsButton">
+                    <style>
+                    .material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+</style>
+  </button>
+
+
             </div>
         </header>
 
