--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
                 <button class="icon-button" id="settingsButton">
                     <style>
                     .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
-</style>
-  </button>
+                        font-variation-settings:
+                        'FILL' 0,
+                        'wght' 400,
+                        'GRAD' 0,
+                        'opsz' 24
+                    }</style>
+                </button>
 
 
             </div>
