--- a/index.html
+++ b/index.html
@@ -9,23 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=keyboard_command_key" />
 </head>
 <body>
     <div id="chatContainer" aria-live="polite">
         <header>
             <h1 id="chatTitle">ChatYMS</h1>
             <div class="header-controls">
-                <button class="icon-button" id="settingsButton">
-                    <style>
-                    .material-symbols-outlined {
-                        font-variation-settings:
-                        'FILL' 0,
-                        'wght' 400,
-                        'GRAD' 0,
-                        'opsz' 24
-                    }</style>
-                </button>
+                <button class="icon-button" id="settingsButton"></button>
+                
 
 
             </div>
