Update index.html real

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
         <header>
             <h1 id="chatTitle">ChatYMS</h1>
             <div class="header-controls">
-                <button class="icon-button" id="settingsButton"></button>
-                
-
-
+                <button id="settingsButton" class="icon-button" title="設定" aria-label="設定を開く">
+                    </button>
             </div>
         </header>
 
