--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             </span>
             <div class="header-controls">
                 <button id="settingsButton" class="icon-button" title="設定" aria-label="設定を開く">
-                    </button>
+                    <span class="material-symbols-outlined">settings</span>
+                </button>
             </div>
         </header>
 
