--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         <header>
             <h1 id="chatTitle">ChatYMS</h1>
             <div class="header-controls">
-                <button id="settingsButton" class="icon-button" title="設定" aria-label="設定を開く">
-                    <span class="material-symbols-outlined">settings</span>
-                </button>
+                <button id="settingsButton" class="icon-button" title="設定" aria-label="設定を開く"></button>
             </div>
         </header>
 
