--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>ChatYMS - v1.7</title>
+    <title>ChatYMS - v3.0</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -90,6 +90,7 @@
                         <h3 id="appInfoTitle">情報</h3>
                         <p class="app-version-info" id="appVersion"></p>
                         <p class="app-release-date" id="appReleaseDate"></p>
+                        <p class="app-developer-info" id="appDeveloperInfo"></p>
                     </div>
                 </div>
             </div>
